sec:Ergebnisse - Deskriptiv Mediennutzung fertig inkl. Tabellen

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -98,7 +98,7 @@ Basierend auf dem oben beschriebenen theoretischen Hintergrund und anhand der au
 \subsubsection{Fragestellung} 
 Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten? Kann zwischen diesem elterlichen Verhalten und deren subjektiven Wohlbefinden ein Zusammenhang gefunden werden?
 \subsubsection{Hypothese 1}
-Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicher-vermeidenden, unsicher-ambivalenten oder desorganisierten Bindungsstil aufweisen.
+Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
 \subsubsection{Hypothese 2}
 Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
 \subsubsection{Hypothese 3}
