--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -43,33 +43,29 @@ Demzufolge gaben 97.2\% der Befragten an, das Smartphone während der Betreuung 
 \end{tikzpicture}
 \end{figure}
 
-Die Medientätigkeit in Minuten wurde anhand der letzten Betreuung erfasst. Dabei wurde unterschieden, ob das Kind wach war oder geschlafen hat. Der Mittelwert der Medientätigkeit während das Kind wach war belief sich auf $M$=93.1 Minuten ($SD$=103.6, $Min$=0, $Max$=613) und $M$=108.6 Minuten, währendem das Kind geschlafen hat ($SD$=105.3, $Min$=0, $Max$=495). Im Total waren die Teilnehmer im Schnitt $M$=202.1 Minuten mit Medien beschäftigt, währendem sie ihr Kind betreuten ($SD$=174.9, $Min$=3, $Max$=840) (Siehe dazu auch Tabelle \ref{table:Medientätigkeit}).
+Die Medientätigkeit in Minuten wurde anhand der letzten Betreuung des Kindes erfasst. Dabei wurde unterschieden, ob das Kind wach war oder geschlafen hat. Alle verwendeten Medien summiert ergab den Mittelwert der Medientätigkeit. Dieser belief sich während das Kind wach war auf $M$=93.1 Minuten ($SD$=103.6, $Min$=0, $Max$=613) und $M$=108.6 Minuten, währendem das Kind geschlafen hat ($SD$=105.3, $Min$=0, $Max$=495). Im Total waren die Teilnehmer im Schnitt $M$=202.1 Minuten mit Medien beschäftigt, währendem sie ihr Kind betreuten ($SD$=174.9, $Min$=3, $Max$=840) (Siehe dazu auch Tabelle \ref{table:Medientätigkeit}).
 
 %Table
 \begin{table}%[htbp]
-\begin{tabular}{m{2em} m{4em}  m{5em}  m{5em} m{5em}} 
-  \hline\hline
-  \multicolumn{5}{c}{\textbf{Total Medientätigkeit in Minuten}}\\
-  
-  & & wach & geschlafen & total\\
+\begin{tabular}{m{8em} m{4em}  m{4em}  m{5em} m{4em}} 
   \hline
-  $N$ & Gültig & 208 & 205 & 204 \\
-  & Fehlend & 10 & 13 & 14\\
-  $M$ & & 93.1 & 108.6 & 202.1 \\
-  $SD$ & & 103.6 & 105.3 & 174.9 \\
-  $Min$ & & 0 & 0 & 3.0 \\
-  $Max$ & & 613 & 495 & 840 \\
-  \hline\hline
-  &&\\
+  & $M$ & $SD$ & Min - Max & Schiefe\\
+  \hline
+  $MNS_{Wach}$* & 93.08 & 103.61 & 0 - 613 & 2.26\\
+  $MNS_{Schlafend}$** & 108.63 & 105.32 & 0 - 495 & 1.56\\
+  $MNS_{Total}$*** & 202.10 & 174.86 & 3 - 840 & 1.44 \\
+  \hline
+  \multicolumn{5}{l}{\textit{Anmerkung. *$N$=208, **$N$=205, ***$N$=204, Angaben in Minuten.}}\\
+  &&&&\\
 \end{tabular}
-\caption{Medientätigkeit}
+\caption{Medientätigkeit während der Betreuung}
 \label{table:Medientätigkeit}
 \end{table}
 
 Auf die einzelnen Medien verteilt bedeutet dies, dass die Probanden im Schnitt $M$=5.2 Minuten telefoniert haben, während dem das Kind wach war und $M$=7.2 Minuten währendem das Kind geschlafen hat (siehe dazu Abbildung \ref{fig:Medientätigkeit}). Im Schnitt haben die Teilnehmer $M$=10 Minuten mit Textnachrichten verbracht (lesen und schreiben) während das Kind war wach und $M$=13.8 Minuten währendem das Kind geschlafen hat. Für das bearbeiten und Lesen von Emails setzten die Teilnehmer $M_{w}$=1.7 Minuten (Kind war wach) und $M_{s}$=7 Minuten ein (Kind hat geschlafen). Beim Lesen und Anschauen von Printemedien ((Bilder-)Bücher, Magazinen, Zeitungen, Comics, etc.) setzten die Eltern $M_{w}$=5.3 und $M_{s}$=12.5 Minuten ein. Im Internet verbrachten sie $M_{w}$=5.9 und $M_{s}$=19.7 Minuten mit Surfen und Informationen suchen. Musik hörten die Eltern während der Betreuung $M_{w}$=18.6 und $M_{s}$=8.3 Minuten. Sie schauten im Schnitt $M_{w}$=5.4 und $M_{s}$=25.1 Minuten Fernseh oder Videos (TV-Sender, Netflix, DVD, etc.). Der Radio lief während $M_{w}$=34.3 und $M_{s}$=12.9 Minuten. Fotos oder Videos wurden während $M_{w}$=5.1 und $M_{s}$=0.9 Minuten gemacht. Video-Games (Smartphone, Computer, Konsole, etc.) wurden während $M_{w}$=.2 und $M_{s}$=1.5 Minuten gespielt. Hörspiele und Hörbücher wurden während $M_{w}$=1.5 und $M_{s}$=2.1 Minuten gehört. Für eine komplette Auflistung der Mittelwerte nach der Unterteilung ob das Kind geschlafen hat oder wach war, inklusiver Angabe des totalen Mittelwerts bitte Tabelle \ref{fig:AppMedientätigkeit} im Anhang \ref{app:TablesMediennutzung} konsultieren.
 
 \begin{figure}%[htp]
-\caption{Mittelwerte der Medientätigkeiten (wach / schlafend)}\label{fig:Medientätigkeit}
+\caption{Mittelwerte der Medientätigkeiten während der Betreuung}\label{fig:Medientätigkeit}
 %\centering
 \begin{tikzpicture}[scale=1]
   \begin{axis}[
@@ -96,7 +92,7 @@ Auf die einzelnen Medien verteilt bedeutet dies, dass die Probanden im Schnitt $
   %schlafend
   \addplot[draw=black,fill=orange] coordinates { (7.2,Telefonieren)(13.8,SMS)(7,Email)(12.5,Lesen)(19.7,Internet)(8.3,Musik)(25.1,TV)(12.9,Radio)(0.9,Fotos)(1.5,VideoGames)(2.1,Hörspiele)};
   
-  \legend{\text{$M$ wach}, \text{$M$ schlafend}}
+  \legend{\text{$M$ Kind wach}, \text{$M$ Kind schlafend}}
   \end{axis}
 \end{tikzpicture}
 \end{figure}
@@ -106,7 +102,26 @@ Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Hau
 In der letzten Frage wurden von den Teilnehmern die drei Medien erhoben, auf die sie während der Betreuung ihres Kindes am wenigsten verzichten konnten. 85.3\% gaben an, nicht auf das Smartphone verzichten zu können, gefolgt vom Radio (Stereonalage, CD-Player) von 33.9\% und 25.2\% Foto- und Videokamera (siehe Tabelle \ref{fig:AppMedienverzicht} im Anhang \ref{app:TablesMediennutzung}). Weiter gaben die Teilnehmer an, dass 11.9\% von ihnen nicht auf den Fernseher, 9.6\% nicht auf das Abo einer Tageszeitung oder Zeitschrift, 8.3\% nicht auf den Computer (Laptop oder Desktop), 2.8\% nicht auf den MP3-Player, 2.3\% nicht auf das Tablet und .9\% nicht auf die Spielkonsole verzichten können.
 
 \subsubsection{Bindung anhand AAS}
-\textit{TBD: Klassifizierung und Aufteilung in Sicher und Unsicher}.
+Die Skalenauswertung des Adult Attachment Scale (AAS) liefert die in Tabelle \ref{table:AASDeskriptiv} dargestellten Ergebnisse. Dabei wurden die transformierten Skalen mit einem Werteberich von 0 bis 100 verwendet (siehe dazu die Formel \ref{eq:AASIndexTrans} in Kapitel \titleref{sec:AAS}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$=15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$=16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$=17.43). Die entsprechenden Werte der original Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} in Anhang \ref{app:TablesAas} zu finden.
+
+\textit{TBD: Klassifizierung in sicher vs. unsicher}
+
+%Table
+\begin{table}%[htbp]
+\begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
+  \hline
+  & $M$ & $SD$ & Min - Max & Schiefe\\
+  \hline
+  $AAS_{\textit{\textnormal{NäheTrans}}}$ & 78.46 & 15.98 & 25 - 100 & -.59\\
+  $AAS_{VertrauenTrans}$ & 80.18 & 16.98 & 16.67 - 100 & -1.17\\
+  $AAS_{AngstTrans}$ & 20.28 & 17.43 & -5 - 75 & .91 \\
+  \hline
+  \multicolumn{5}{l}{\textit{Anmerkung. $N$=217, Wertebereich Skala 0 bis 100.}}\\
+  &&&&\\
+\end{tabular}
+\caption{Skalenwerte der Adult Attachment Scale - AAS}
+\label{table:AASDeskriptiv}
+\end{table}
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
