--- a/content/Anhang/AAS.tex
+++ b/content/Anhang/AAS.tex
@@ -1,5 +1,5 @@
 
-Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validierungsstudie von \citeA{Schmidt2004}, des orignalen Instruments von \citeA{Collins1990} übernommen. Die Spalte \enquote{Orig.} in Tabelle \titleref{table:AAS} beinhaltet die originale Nummerierung der Fragebogenitems. Die Spalte \enquote{Nr.} beinhaltet die neue Nummerierung, so wie sie im Umfragebogen (siehe auch \titleref{app:Fragebogen}) verwendet wurde.
+Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validierungsstudie von \citeA{Schmidt2004}, des orignalen Instruments von \citeA{Collins1990} übernommen. Die Spalte \enquote{Orig.} in Tabelle \titleref{table:AASItems} beinhaltet die originale Nummerierung der Fragebogenitems. Die Spalte \enquote{Nr.} beinhaltet die neue Nummerierung, so wie sie im Umfragebogen (siehe auch \titleref{app:Fragebogen}) verwendet wurde.
 
 
 \begin{table}[htbp]
@@ -39,5 +39,5 @@ Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validi
   \multicolumn{3}{l}{}\\
 \end{tabular}
 \caption{Items der Adult Attachment Scale}
-\label{table:AAS}
+\label{table:AASItems}
 \end{table}
