--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,11 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/TabellenMediennutzung.tex}
 \newpage
 
+% Tabellen AAS
+\section{Tabellen Bindung}\label{app:TablesAas}
+\input{content/Anhang/TabellenAAS.tex}
+\newpage
+
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
 \input{content/Anhang/AAS.tex}
